--- a/index.html
+++ b/index.html
@@ -73,23 +73,21 @@
 							<div class="row">
 								<div class="col-4 col-12-medium">
 									<header>
-										<h2>Odio faucibus ipsum integer consequat</h2>
-										<p>Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>
+										<h2>La Visione merita una strategia all'altezza</h2>
+										<p>Il successo porta nuove sfide. Superato il product-market fit, l'improvvisazione non basta più.</p>
 									</header>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>Feugiat accumsan lorem eu ac lorem amet sed accumsan donec.
-									Blandit orci porttitor semper. Arcu phasellus tortor enim mi
-									nisi praesent dolor adipiscing. Integer mi sed nascetur cep aliquet
-									augue varius tempus lobortis porttitor accumsan consequat
-									adipiscing lorem dolor.</p>
+									<p>Per sostenere una crescita esponenziale serve trasformare la creatività 
+										in processi documentati, costruire un team strutturato e prendere decisioni 
+										strategiche veloci, bilanciando i rischi con informazioni spesso limitate.</p>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>Morbi enim nascetur et placerat lorem sed iaculis neque ante
-									adipiscing adipiscing metus massa. Blandit orci porttitor semper.
-									Arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer
-									mi sed nascetur cep aliquet augue varius tempus. Feugiat lorem
-									ipsum dolor nullam.</p>
+									<p>
+										<b>Scalabilità dei Processi:</b> Dall'improvvisazione a flussi ripetibili.<br />
+										<b>Struttura Organizzativa:</b> Ruoli chiari per attrarre i migliori talenti.<br />
+										<b>Tecnologie:</b> Gli strumenti giusti per il momento attuale della tua azienda.
+									</p>
 								</div>
 							</div>
 						</div>
@@ -102,13 +100,15 @@
 					<span class="image fit main"><img src="images/pic03.jpg" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>Interdum amet non magna accumsan</h2>
-							<p>Nunc commodo accumsan eget id nisi eu col volutpat magna</p>
+							<h2>Una Bussola Strategica a Bassa Persistenza</h2>
+							<p>Non siamo consulenti che si accampano nei tuoi uffici per mesi.</p>
 						</header>
-						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
-						<ul class="actions">
+						<p> Offriamo una guida esperta e mirata per i fondatori che necessitano di chiarezza immediata.
+							Ti portiamo prospettiva, esperienza enterprise e connessioni quando ne hai più bisogno, 
+							lasciandoti poi libero di eseguire autonomamente con il tuo team.</p>
+						<!-- <ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
-						</ul>
+						</ul>-->
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
 				</section>
@@ -118,13 +118,17 @@
 					<span class="image fit main bottom"><img src="images/pic04.jpg" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>Interdum felis blandit praesent sed augue</h2>
-							<p>Accumsan integer ultricies aliquam vel massa sapien phasellus</p>
+							<h2>Risultati Concreti, non solo Slide</h2>
+							<p>Definiamo gli ingredienti che ti servono per affrontare le tue sfide.</p>
 						</header>
-						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
-						<ul class="actions">
+						<p>
+							<b>Decisioni Consapevoli:</b> Riduci il rischio di errore basandoti su dati ed esperienza comprovata.<br />
+							<b>Efficienza Operativa:</b> Bilancia la velocità da startup con il rigore enterprise, senza burocrazia inutile. <br />
+							<b>Risparmio di Tempo:</b> Evita vicoli ciechi costosi e accelera il time-to-market concentrando il capitale su ciò che conta.
+						</p>
+						<!-- <ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
-						</ul>
+						</ul> -->
 					</div>
 					<a href="#four" class="goto-next scrolly">Next</a>
 				</section>
@@ -133,27 +137,37 @@
 				<section id="four" class="wrapper style1 special fade-up">
 					<div class="container">
 						<header class="major">
-							<h2>Accumsan sed tempus adipiscing blandit</h2>
-							<p>Iaculis ac volutpat vis non enim gravida nisi faucibus posuere arcu consequat</p>
+							<h2>Il Metodo A-ctive: Chiarezza in 3 Step</h2>
+							<p>Rapidi, mirati e focalizzati. Dritti al punto sulle tue necessità</p>
 						</header>
 						<div class="box alt">
 							<div class="row gtr-uniform">
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-chart-area"></span>
-									<h3>Ipsum sed commodo</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<h3>Listen</h3>
+									<p>
+										Sessione iniziale per comprendere le tue esigenze, 
+										i vincoli operativi e il contesto specifico della tua sfida. 
+										Ascoltiamo prima di agire..
+									</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-comment"></span>
-									<h3>Eleifend lorem ornare</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<h3>Strategy Design</h3>
+									<p>
+										Ti presentiamo un'analisi approfondita (SWOT) e una roadmap chiara con priorità definite. 
+										Valutiamo insieme rischi nascosti e opportunità inespresse per massimizzare il valore.
+									</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-flask"></span>
-									<h3>Cubilia cep lobortis</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<h3>Strategy Design</h3>
+									<p>
+										Ti presentiamo un'analisi approfondita (SWOT) e una roadmap chiara con priorità definite. 
+										Valutiamo insieme rischi nascosti e opportunità inespresse per massimizzare il valore.
+									</p>
 								</section>
-								<section class="col-4 col-6-medium col-12-xsmall">
+								<!-- <section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-paper-plane"></span>
 									<h3>Non semper interdum</h3>
 									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
@@ -167,14 +181,14 @@
 									<span class="icon solid alt major fa-lock"></span>
 									<h3>Massa arcu accumsan</h3>
 									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
-								</section>
+								</section>-->
 							</div>
 						</div>
-						<footer class="major">
+						<!-- <footer class="major">
 							<ul class="actions special">
 								<li><a href="#" class="button">Magna sed feugiat</a></li>
 							</ul>
-						</footer>
+						</footer> -->
 					</div>
 				</section>
 
@@ -196,16 +210,22 @@
 
 			<!-- Footer -->
 				<footer id="footer">
-					<ul class="icons">
+					<!-- <ul class="icons">
 						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 						<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 						<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 						<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
-					</ul>
+					</ul> -->
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; A-ctive S.r.l.. All rights reserved.</li>
+						<li>Sede Legale: Piazza della Serenissima, 60, 31033, Catelfranco Veneto (TV)</li>
+						<li>Email: contact@a-ctive.it</li>
+						<li>PEC: pec@pec.active.it</li>
+						<li>PIVA: 05588540269</li>
+						<li>C.F.: 05588540269</li>
+						
 					</ul>
 				</footer>
 
