Update arrow color to #E91E63 and adjust CSS for improved layout and readability

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-	a-ctive s.r.l. - https://a-ctive.it
+	A-ctive s.r.l. - https://a-ctive.it
 -->
 <!--
 	TEMPLATE: Landed by HTML5 UP
@@ -25,7 +25,8 @@
 
 			<!-- Header -->
 				<header id="header">
-					<!-- <h1 id="logo"><a href="index.html"><img src="images/logo_small.png" alt="A-ctive Logo" /></a></h1>-->
+					<h1 id="logo">A-ctive</h1>
+					<!--<a href="index.html"><img src="images/logo_small.png" alt="A-ctive Logo" /></a>-->
 					<nav id="nav">
 						<ul>
 							<!--<li><a href="index.html">Home</a></li>
@@ -50,7 +51,6 @@
 							<li><a href="https://forms.gle/EtCn7ZyVv6yyxcp89" class="button primary" target="_blank">Contattaci</a></li>
 						</ul>
 					</nav>
-				-->
 				</header>
 
 			<!-- Banner -->
@@ -58,8 +58,8 @@
 					<div class="content">
 						<header>
 							<h2>Your Business Catalyst</h2>
-							<p>Gli ingredienti che ti servono per scegliere<br />
-								la strada migliore per la TUA azienda.</p>
+							<p>Gli ingredienti che ti mancano per scegliere<br />
+								la migliore ricetta per la tua realtà StartUp/ScaleUp.</p>
 						</header>
 						<span class="image"><img src="images/logo.png" alt="" /></span>
 					</div>
@@ -75,20 +75,23 @@
 								<div class="col-4 col-12-medium">
 									<header>
 										<h2>La Visione merita una strategia all'altezza</h2>
-										<p>Il successo porta nuove sfide. Superato il product-market fit, l'improvvisazione non basta più.</p>
+										<p>Il successo porta nuove sfide. 	</p>
 									</header>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>Per sostenere una crescita esponenziale serve trasformare la creatività 
-										in processi documentati, costruire un team strutturato e prendere decisioni 
-										strategiche veloci, bilanciando i rischi con informazioni spesso limitate.</p>
+									<p>
+										Ti aiutiamo a definire una strategia operativa su misura per il tuo contesto, 
+										bilanciando i rischi con informazioni spesso limitate.
+										In particolare il momento della decisione condiziona le scelte e gli impatti futuri.
+										Agili, versatili e veloci, ti supportiamo nel trasformare la tua visione in realtà concreta.
+									</p>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>
-										<b>Scalabilità dei Processi:</b> Dall'improvvisazione a flussi ripetibili.<br />
-										<b>Struttura Organizzativa:</b> Ruoli chiari per attrarre i migliori talenti.<br />
-										<b>Tecnologie:</b> Gli strumenti giusti per il momento attuale della tua azienda.
-									</p>
+										<ul>
+											<li><b>Scalabilità dei Processi:</b> Dall'improvvisazione a flussi ripetibili.</li>
+											<li><b>Struttura Organizzativa:</b> Ruoli chiari per attrarre i migliori talenti.</li>
+											<li><b>Tecnologie:</b> Gli strumenti giusti per il momento attuale della tua azienda.</li>
+										</ul>
 								</div>
 							</div>
 						</div>
@@ -119,13 +122,15 @@
 					<span class="image fit main bottom"><img src="images/pic04.jpg" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>Risultati Concreti, non solo Slide</h2>
+							<h2>Scenari, opzioni e rischi concreti, provati sul campo</h2>
 							<p>Definiamo gli ingredienti che ti servono per affrontare le tue sfide.</p>
 						</header>
 						<p>
-							<b>Decisioni Consapevoli:</b> Riduci il rischio di errore basandoti su dati ed esperienza comprovata.<br />
-							<b>Efficienza Operativa:</b> Bilancia la velocità da startup con il rigore enterprise, senza burocrazia inutile. <br />
-							<b>Risparmio di Tempo:</b> Evita vicoli ciechi costosi e accelera il time-to-market concentrando il capitale su ciò che conta.
+							<ul>
+								<li><b>Decisioni Consapevoli:</b> Riduci il rischio di errore basandoti su dati ed esperienza comprovata.</li>
+								<li><b>Efficienza Operativa:</b> Bilancia la velocità da startup con il rigore enterprise, senza burocrazia inutile.</li>
+								<li><b>Risparmio di Tempo:</b> Evita vicoli ciechi costosi e accelera il time-to-market concentrando il capitale su ciò che conta.</li>
+							</ul>
 						</p>
 						<!-- <ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
@@ -138,7 +143,7 @@
 				<section id="four" class="wrapper style1 special fade-up">
 					<div class="container">
 						<header class="major">
-							<h2>Il Metodo A-ctive: Chiarezza in 3 Step</h2>
+							<h2>L'approccio e l'esperienza di A-ctive: Chiarezza in 3 Step</h2>
 							<p>Rapidi, mirati e focalizzati. Dritti al punto sulle tue necessità</p>
 						</header>
 						<div class="box alt">
@@ -226,7 +231,7 @@
 					</ul> -->
 					<ul class="copyright">
 						<li>&copy; A-ctive S.r.l.. All rights reserved.</li>
-						<li>Sede Legale: Piazza della Serenissima, 60, 31033, Catelfranco Veneto (TV)</li>
+						<li>Sede Legale: Piazza della Serenissima, 60, 31033, Castelfranco Veneto (TV)</li>
 						<li>Email: contact@a-ctive.it</li>
 						<li>PEC: pec@pec.active.it</li>
 						<li>PIVA: 05588540269</li>
