Update icons and text in sections; enhance button styles for better visibility

--- a/index.html
+++ b/index.html
@@ -149,27 +149,27 @@
 						<div class="box alt">
 							<div class="row gtr-uniform">
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-chart-area"></span>
+									<span class="icon solid alt major fas fa-mug-hot"></span>
 									<h3>Listen</h3>
 									<p>
 										Sessione iniziale per comprendere le tue esigenze, 
 										i vincoli operativi e il contesto specifico della tua sfida. 
-										Ascoltiamo prima di agire..
+										Ascoltiamo prima di agire.
 									</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-comment"></span>
+									<span class="icon solid alt major fa-chess"></span>
 									<h3>Strategy Design</h3>
 									<p>
-										Ti presentiamo un'analisi approfondita (SWOT) e una roadmap chiara con priorità definite. 
-										Valutiamo insieme rischi nascosti e opportunità inespresse per massimizzare il valore.
+										Costruiamo un'analisi approfondita di opzioni con una roadmap chiara e priorità definite. 
+										Consideriamo opzioni, best practice, rischi, minacce e valutiamo tempi e costi.
 									</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-flask"></span>
-									<h3>Strategy Design</h3>
+									<span class="icon solid alt major fa-plane-departure"></span>
+									<h3>Time to move</h3>
 									<p>
-										Ti presentiamo un'analisi approfondita (SWOT) e una roadmap chiara con priorità definite. 
+										Ti presentiamo gli scenari che hai davanti, aiutandovi nell'interpretazione nel vostro contesto. 
 										Valutiamo insieme rischi nascosti e opportunità inespresse per massimizzare il valore.
 									</p>
 								</section>
@@ -196,6 +196,7 @@
 							</ul>
 						</footer> -->
 					</div>
+					<a href="#five" class="goto-next scrolly">Next</a>
 				</section>
 
 			<!-- Five -->
