Fix typos and improve phrasing in Italian text; update PEC email address

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 									<span class="icon solid alt major fa-plane-departure"></span>
 									<h3>Time to move</h3>
 									<p>
-										Ti presentiamo gli scenari che hai davanti, aiutandovi nell'interpretazione nel vostro contesto. 
+										Ti presentiamo gli scenari che hai davanti, aiutandoti nella contestualizzazione all'interno del tuo contesto. 
 										Valutiamo insieme rischi nascosti e opportunità inespresse per massimizzare il valore.
 									</p>
 								</section>
@@ -204,7 +204,7 @@
 					<div class="container">
 						<header>
 							<h2>Sentiamoci per capire i tuoi bisogni</h2>
-							<p>siamo a disposizione anche per un semplice confronto<br />
+							<p>Siamo a disposizione anche per un semplice confronto<br />
 								
 							</p>
 							<a href="https://forms.gle/EtCn7ZyVv6yyxcp89" class="button" target="_blank">Ti ascoltiamo</a>	
@@ -234,7 +234,7 @@
 						<li>&copy; A-ctive S.r.l.. All rights reserved.</li>
 						<li>Sede Legale: Piazza della Serenissima, 60, 31033, Castelfranco Veneto (TV)</li>
 						<li>Email: contact@a-ctive.it</li>
-						<li>PEC: pec@pec.active.it</li>
+						<li>PEC: pec@pec.a-ctive.it</li>
 						<li>PIVA: 05588540269</li>
 						<li>C.F.: 05588540269</li>
 						
